# speechwriter-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
.claude/: settings.json
.claude/hooks/: invariant-hints.sh  pytest-gate.sh  ruff-ty-gate.sh
.streamlit/: config.toml
app_pages/: browse.py  write.py
skills/audience-and-occasion/: SKILL.md
skills/delivery-and-cadence/: SKILL.md
skills/rhetorical-devices/: SKILL.md
skills/speech-structures/: SKILL.md
src/speechwriter/: __init__.py  __main__.py  agent.py  cli.py  config.py  memory.py  observability.py  prompts.py  subagents.py  tools.py  transcript.py  webui.py  workspace.py
tests/: test_build.py  test_webapp.py
