[project]
name = "speechwriter-agent"
version = "0.1.0"
description = "A speechwriter agent built with Deep Agents (LangChain / LangGraph)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daryl Lim" }]
dependencies = [
    "deepagents>=0.6.12,<0.8",
    "langchain-anthropic>=1.4.8",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.60.0",
]

[project.scripts]
speechwriter = "speechwriter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speechwriter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
# Point the type checker at the project virtualenv so third-party imports resolve.
python = "./.venv"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
